kubernetes/apps/penpot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: penpot-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`design.mauzlab.de`)
      services:
        - name: penpot
          port: 8080
  tls: {}
